@@ -17,7 +17,8 @@ HEADERS += \
 	base_global.h \
     pathmanager.h \
     statelistmodel.h \
-	stateimageprovider.h
+	stateimageprovider.h \
+    configuration.h
 
 SOURCES += \
     machineview.cpp \
@@ -29,7 +30,8 @@ SOURCES += \
 	settingsview.cpp \
     pathmanager.cpp \
     statelistmodel.cpp \
-	stateimageprovider.cpp
+	stateimageprovider.cpp \
+    configuration.cpp
 
 unix {
 	qml.path = /opt/emumaster/qml/base
@@ -59,6 +61,8 @@ unix {
 	qmlimg.files = ../../../qml/img/*
 	INSTALLS += qml qmlimg pad
 }
+
+
 
 
 
